@@ -653,6 +653,8 @@ Release 2.7.0 - UNRELEASED
     HADOOP-11283. SequenceFile.Writer can leak file descriptors in
     DistCpV1#setup(). (Varun Saxena via ozawa)
 
+    HADOOP-11448. Fix findbugs warnings in FileBasedIPList. (ozawa)
+
 Release 2.6.0 - 2014-11-18
 
   INCOMPATIBLE CHANGES
